	  add #ifdef HAVE_CONFIG_H
	    #include <config.h>
	    #endif
	  this fixes compile errors on SuSE 8.0 + 8.1

2003-01-07  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-core/file/* -- don't save half-built data.
	  Make sure that we're only saving the items that have been fully
	  created (not half-created).  Fixes the cause of bug #102776.

2003-01-06  Derek Atkins  <derek@ihtfp.com>

	* macros/Makefile.am: include the rest of the macros in the dist.

	* src/engine/test/test-scm-query-import.scm: add a warning message
	  about potential "error" output which can be ignored.

	* intl-scm/Makefile.am: applied John's patch to build guile-strings.c
	  properly.
	
2003-01-05  Chris Lyttle  <chris@wilddev.net>

	* configure.in: release 1.7.7
	* NEWS: release 1.7.7

2003-01-05  John H. Pierce <john@killterm.org>
    * Makefile.am: Added rule for libtool rebuilding.

    * configure.in: Changed AC_DISABLE_STATIC to AM_DISABLE_STATIC
      Look in the right place for srfi modules.
      Reordered output files so directories get created in the right order.

    * intl-scm/Makefile.am: Only find scm files once.
      Fix for non-srcdir builds.

    * src/app-utils/Makefile.am:
    * src/business/business-core/Makefile.am: 
    * src/business/dialog-tax-table/Makefile.am:
    * src/gnome/Makefile.am:
    * src/gnome-search/Makefile.am:
    * src/gnome-utils/Makefile.am:
    * src/business/business-gnome/Makefile.am:
    * src/gnc-module/Makefile.am: 
      Removed unneeded depends, they interfere with the auto-generated ones.

    * src/gnc-module/test/mod-bar/Makefile.am: 
    * src/gnc-module/test/mod-baz/Makefile.am: 
    * src/gnc-module/test/mod-foo/Makefile.am:
    * src/gnc-module/test/misc-mods/Makefile.am:
      Don't install test modules.
        
    * src/backend/postgres/Makefile.am:
      Fixed auto-generation of sources out of srcdir.
      Moved auto-generation sources all to BUILT_SOURCES to generate
      correct depends.